--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!doctype html>
-
 <html lang="en">
 <head>
+    <!-- Linked the Stylesheet to css -->
   <meta charset="utf-8">
-
   <title>Sprint Challenge - Home</title>
-
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
+  <link rel="stylesheet" type="text/css" href="style/index.css"
 </head>
 
 <body>
+<header>   
     <div class="container">
-   
+<!-- Added Links and Lambda image -->
+    <nav>
+        <img id='lambda-black' src="assets/lambda-black.png">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
         <section class="top-content">
+            <!-- added photo -->
+            <img id="Jumbo" src="assets/jumbo.jpg"
+
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -24,7 +33,7 @@
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
             </div>
         </section>
-        
+</header> 
         <section class="middle-content">
         
             <h2>Why Did It Have To Be Boxes...</h2>
