--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Linked the Stylesheet to css -->
   <meta charset="utf-8">
   <title>Sprint Challenge - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="style/index.css"
 </head>
@@ -20,15 +21,16 @@
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
     </nav>
+    </div>
         <section class="top-content">
             <!-- added photo -->
             <img id="Jumbo" src="assets/jumbo.jpg">
 
-            <div class="text-container">
+            <div class="container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
             </div>
-            <div class="text-container">
+            <div class="container">
                 <h2>The Past</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
             </div>
